Arbitrary many monitors sampling seamlessly. Tests, Queue, ByteBuffer and test monitors added.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,7 @@ include ../Makefile.inc
 
 CFLAGS = -O2 -c $(INC_PATH) $(LIB_PATH) -lglog
 
-all: PracticalSocket.a ClassLoader.a System.a
+all: PracticalSocket.a ClassLoader.a System.a ByteBuffer
 
 PracticalSocket.a: PracticalSocket.o
 	ar cru libPracticalSocket.a PracticalSocket.o
@@ -22,6 +22,10 @@ System.a: System.o
 System.o: System.cpp
 	$(CC) $(CFLAGS) System.cpp
 
+ByteBuffer: 
+	$(CC) $(CFLAGS) ByteBuffer.cpp
+	ar cru libByteBuffer.a ByteBuffer.o
+	
 clean:
 	rm -f *.o
 	rm -f *.a
