Scripts improved some. Does not compile graphics on rocks (ifneq in process monitor Makefile). Memory release by streamer.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,30 +2,28 @@ include ../Makefile.inc
 
 CFLAGS = -O2 -c $(INC_PATH) $(LIB_PATH) -lglog
 
-all: PracticalSocket.a ClassLoader.a System.a ByteBuffer
+all: PracticalSocket ClassLoader System ByteBuffer LinuxProcessMonitor
 
-PracticalSocket.a: PracticalSocket.o
+PracticalSocket: 
+	$(CC) $(CFLAGS) PracticalSocket.cpp
 	ar cru libPracticalSocket.a PracticalSocket.o
 
-PracticalSocket.o: PracticalSocket.cpp
-	$(CC) $(CFLAGS) PracticalSocket.cpp
-
-ClassLoader.a: ClassLoader.o
+ClassLoader: 
+	$(CC) $(CFLAGS) ClassLoader.cpp
 	ar cru libClassLoader.a ClassLoader.o
 
-ClassLoader.o: ClassLoader.cpp
-	$(CC) $(CFLAGS) ClassLoader.cpp
-
-System.a: System.o
-	ar cru libSystem.a System.o
-
-System.o: System.cpp
+System: 
 	$(CC) $(CFLAGS) System.cpp
+	ar cru libSystem.a System.o
 
 ByteBuffer: 
 	$(CC) $(CFLAGS) ByteBuffer.cpp
 	ar cru libByteBuffer.a ByteBuffer.o
-	
+
+#LinuxProcessMonitor: 
+#	$(CC) -fPIC -static $(CFLAGS) LinuxProcessMonitor.cpp
+#	ar cru libLinuxProcessMonitor.a LinuxProcessMonitor.o
+
 clean:
 	rm -f *.o
 	rm -f *.a
