--- a/monitors/Makefile.inc
+++ b/monitors/Makefile.inc
@@ -1,4 +1,4 @@
 
-CFLAGS_SO_PREPARE = -shared -c -fPIC
-CFLAGS_SO_CREATE = -lc -shared
+CFLAGS_SO_PREPARE = -static -shared -c -fPIC
+CFLAGS_SO_CREATE = -static -lc -shared
 INSTALL_CMD=mv *.so ../bin
