--- a/server/Makefile
+++ b/server/Makefile
@@ -1,13 +1,14 @@
 include ../Makefile.inc
 
-LIB_LOCAL=-lboost_filesystem -lByteBuffer
+LIB_PLPLOT=-lplplotcxxd -lplplotd -lltdl -ldl -lm -lcsirocsa  -lqhull -lqsastime -lfreetype
+LIB_LOCAL=-lboost_filesystem -lByteBuffer $(LIB_PLPLOT)
 EXECUTABLE_NAME=wallmons
 SRC=*.cpp
 
 all: wallmons
 
 wallmons: $(SRC)
-	$(CC) $(CFLAGS_COMMON) -o $(EXECUTABLE_NAME) $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON) $(LIB_LOCAL)
+	$(CC) $(CFLAGS_COMMON) -o $(EXECUTABLE_NAME) $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON) $(LIB_LOCAL) #`pkg-config --cflags --libs plplotd-c++`
 
 clean:
 	rm -f *.o
