Move towards pointer policy due to conversation with Tor-Magne. More/full support for self-contained .so libraries. LinuxProcessMonitor with open() call and made static library. process monitor breakes, need to generalize bar chart.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,5 +1,5 @@
-CC = g++
-CFLAGS_COMMON = -rdynamic -O2 -fno-stack-protector -Wall
+CC = g++ -O2
+CFLAGS_COMMON = -rdynamic -fno-stack-protector -Wall
 
 LIB_COMMON=-lpthread -lboost_thread -ldl -lev -lglog -lprotobuf -lPracticalSocket -lClassLoader -lSystem
 
