--- a/monitors/Makefile.inc
+++ b/monitors/Makefile.inc
@@ -1,4 +1,5 @@
+# In order to force static linking:  -Wl,-Bstatic [libs] -Wl,-Bdynamic
 
-CFLAGS_SO_PREPARE = -static -shared -c -fPIC
-CFLAGS_SO_CREATE = -static -lc -shared
+CFLAGS_SO_PREPARE = -c -fPIC
+CFLAGS_SO_CREATE = -shared
 INSTALL_CMD=mv *.so ../bin
