--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -6,7 +6,7 @@ SRC=*.cpp *.h
 all: wallmond
 
 wallmond: $(SRC)
-	$(CC) $(CFLAGS_COMMON) -o $(EXECUTABLE_NAME) $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON)
+	$(CC) $(CFLAGS_COMMON) $(INC_PATH) $(LIB_PATH) $(SRC) $(LIB_COMMON) -o $@
 
 clean:
 	rm -f *.o
