--- a/server/Makefile
+++ b/server/Makefile
@@ -1,14 +1,13 @@
 include ../Makefile.inc
 
-#LIB_PLPLOT=-lplplotcxxd -lplplotd -lltdl -ldl -lm -lcsirocsa  -lqhull -lqsastime -lfreetype
-LIB_LOCAL=-lboost_filesystem -lByteBuffer
+LIB_LOCAL=-lByteBuffer -lMonitorDispatcher
 EXECUTABLE_NAME=wallmons
 SRC=*.cpp *.h
 
 all: wallmons
 
 wallmons: $(SRC)
-	$(CC) $(CFLAGS_COMMON) -o $(EXECUTABLE_NAME) $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON) $(LIB_LOCAL) #`pkg-config --cflags --libs plplotd-c++`
+	$(CC) $(CFLAGS_COMMON) -o $(EXECUTABLE_NAME) $(SRC) $(INC_PATH) $(LIB_PATH) -L/home/local/lib $(LIB_COMMON) $(LIB_LOCAL)
 
 clean:
 	rm -f *.o
