--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -O2 -c
 DIRS_PRE = stubs 
 DIRS_POST = touchmanager
 
-all: SubDirsPre PracticalSocket ClassLoader System ByteBuffer LinuxProcessMonitor IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector NameTagList SubDirsPost 
+all: SubDirsPre Config PracticalSocket ClassLoader System ByteBuffer LinuxProcessMonitor IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector NameTagList SubDirsPost 
 	
 clean: 	
 	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE} clean) ; done
@@ -14,6 +14,10 @@ clean:
 	
 SubDirsPre:
 	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE}) ; done
+
+Config: Config.h Config.cpp
+	$(CC) $(CFLAGS) $(INC_PATH) $?
+	ar cru lib$@.a $@.o
 
 PracticalSocket: PracticalSocket.h PracticalSocket.cpp
 	$(CC) $(CFLAGS) $?
