Collectors can now specify port if necessary

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -3,8 +3,9 @@ CFLAGS_COMMON = -Wno-multichar -rdynamic -fno-stack-protector -g
 
 LIB_COMMON= -lMonitorDispatcher -lConfig -lpthread -lboost_thread -ldl -lev -lglog -lprotobuf -lPracticalSocket -lClassLoader -lSystem -lWallmonMessage -lIoLogger
 
-WALLMON=/home/arild/WallMon
-SYSTEM=/home/arild
+USER = $(shell whoami)
+WALLMON=/home/$(USER)/WallMon
+SYSTEM=/home/$(USER)
 
 INC_PATH=-I$(SYSTEM)/include -I$(WALLMON)/lib
 LIB_PATH=-L$(SYSTEM)/lib -L$(WALLMON)/lib
