--- a/monitors/boids2d/Makefile
+++ b/monitors/boids2d/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 include ../../Makefile.inc
 
-LIB_GRAPHIC=-lGLU -lGL -lfreetype -lz -lftgl -lglut -lSDL
+LIB_GRAPHIC=-lGL -lfreetype -lz -lftgl -lSDL
 LIB=-lm -lConfig -lSystem -lTouchManager -Wl,-Bstatic -lshout -lNameTagList -Wl,-Bdynamic -lWallView -lProcessCollector -lpthread -lboost_thread -lglog $(LIB_GRAPHIC)
 SRC=*.cpp *.h
 
@@ -11,8 +11,9 @@ ifeq ("$(HOSTNAME)", "rocksvv.cs.uit.no")
 ROCKSVV += -D ROCKSVV
 endif
 
+USER = $(shell whoami)
 all: $(SRC)
-	$(CC) -g -Wno-multichar $(ROCKSVV) $(CFLAGS_SO_PREPARE) $(INC_PATH) -I/home/arild/include/freetype2 $(SRC)
+	$(CC) -g -Wno-multichar $(ROCKSVV) $(CFLAGS_SO_PREPARE) $(INC_PATH) -I/home/$(USER)/include/freetype2 $(SRC)
 	$(CC) -g -Wno-multichar $(CFLAGS_SO_CREATE) -L/home/local/lib $(LIB_PATH) -o libboids2d.so *.o $(LIB)
 	mv *.so ../bin
 			
