--- a/lib/touchmanager/Makefile
+++ b/lib/touchmanager/Makefile
@@ -6,6 +6,6 @@ clean:
 	rm -f *.o
 
 TouchManager: STouchManager.h STouchManager.cpp WVGeometry.h WVGeometry.cpp
-	$(CC) -O2 -c -Wno-multichar $(INC_PATH) $(LIB_PATH) $? -lpthread -lshout
+	$(CC) -O2 -c -fPIC -Wno-multichar $(INC_PATH) $(LIB_PATH) $? -lpthread -lshout
 	ar rcs lib$@.a STouchManager.o WVGeometry.o
 	mv *.a ..
