Generalized aggregation of statistics (proc, procName, node, etc.). Started on new left column, which is currently limited. Possible bug with CPU statistics.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -8,4 +8,4 @@ WALLMON=/home/$(USER)/WallMon
 SYSTEM=/home/$(USER)
 
 INC_PATH=-I$(SYSTEM)/include -I$(WALLMON)/lib
-LIB_PATH=-L$(SYSTEM)/lib -L$(WALLMON)/lib
+LIB_PATH=-L$(SYSTEM)/lib -L$(SYSTEM)/lib64 -L$(WALLMON)/lib
