--- a/monitors/boids2d/Makefile
+++ b/monitors/boids2d/Makefile
@@ -1,23 +1,40 @@
 include ../Makefile.inc
 include ../../Makefile.inc
 
-LIB_GRAPHIC=-lGL -lfreetype -lz -lftgl -lSDL
-LIB=-lm -lConfig -lSystem -lTouchManager -Wl,-Bstatic -lshout -Wl,-Bdynamic -lWallView -lProcessCollector -lpthread -lboost_thread -lglog $(LIB_GRAPHIC)
-SRC=*.cpp *.h
+SRC = $(shell find . -name \*.cpp)
+OBJS = $(SRC:.cpp=.o)
 
-# Do not compile with graphics on rocksvv 
+# Take display wall into account on Rocksvv cluster
 HOSTNAME = $(shell hostname)
 ifeq ("$(HOSTNAME)", "rocksvv.cs.uit.no")
 ROCKSVV += -D ROCKSVV
 endif
 
-USER = $(shell whoami)
-all: $(SRC)
-	$(CC) -g -Wno-multichar $(ROCKSVV) $(CFLAGS_SO_PREPARE) $(INC_PATH) -I/home/$(USER)/include/freetype2 $(SRC)
-	$(CC) -g -Wno-multichar $(CFLAGS_SO_CREATE) -L/home/local/lib $(LIB_PATH) -o libboids2d.so *.o $(LIB)
+LDFLAGS=-lm -lConfig -lSystem -lTouchManager -lWallView -lpthread -lboost_thread -lglog -lfreetype -lz -lftgl `sdl-config --libs`
+ifeq ($(PLATFORM), Darwin)	
+	LDFLAGS+=-framework OpenGL
+else
+	LDFLAGS+=-lGL
+endif
+LDFLAGS+= -lProcessCollector -lshout
+
+libboids2d.so: $(OBJS)
+	$(CC) -o $@ $(CFLAGS_SO_CREATE) $(LIB_PATH) $^ $(LDFLAGS)
 	mv *.so ../bin
+
+all: libboids2d.so
 			
 clean:
 	rm -f *.o
 	rm -f *.so
 
+%.o:%.cpp
+	$(CC) -g -Wno-multichar $(ROCKSVV) $(CFLAGS_SO_PREPARE) $(INC_PATH) -c -o $@ $<
+
+        
+depend: .depend
+.depend:
+	$(CC) -g -Wno-multichar $(ROCKSVV) $(CFLAGS_SO_PREPARE) $(INC_PATH) -MM $(SRC) > $@
+
+-include .depend
+        
