--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,20 +4,23 @@ CFLAGS = -O2 -c -fPIC
 DIRS_PRE = stubs 
 DIRS_POST = touchmanager
 
-all: SubDirsPre ClassLoader System Config PracticalSocket ByteBuffer LinuxProcessMonitor IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector SubDirsPost
+
+
+all: SubDirsPre ClassLoader wSystem Config PracticalSocket ByteBuffer LinuxProcessMonitor LinuxProcessMonitorLight IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector SubDirsPost
 	
 clean: 	
 	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE} clean) ; done
 	rm -f *.o
 	rm -f *.a
+	rm -f *.gch
 	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE} clean) ; done
 	
 SubDirsPre:
 	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE}) ; done
 
-System: System.h System.cpp 
+wSystem: System.h System.cpp 
 	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
+	ar cru lib$@.a System.o
 
 Config: Config.h Config.cpp
 	$(CC) $(CFLAGS) $(INC_PATH) $?
@@ -36,6 +39,10 @@ ByteBuffer: ByteBuffer.h ByteBuffer.cpp
 	ar cru lib$@.a $@.o
 
 LinuxProcessMonitor: LinuxProcessMonitor.h LinuxProcessMonitor.cpp 
+	$(CC) $(CFLAGS) $(INC_PATH) $?
+	ar rcs lib$@.a $@.o
+	
+LinuxProcessMonitorLight: LinuxProcessMonitorLight.h LinuxProcessMonitorLight.cpp 
 	$(CC) $(CFLAGS) $(INC_PATH) $?
 	ar rcs lib$@.a $@.o
 
@@ -57,11 +64,10 @@ MonitorDispatcher: PracticalSocket.o ClassLoader.o MonitorDispatcher.h MonitorDi
 	ar cru lib$@.a $@.o stubs/MonitorDispatcher.pb.o
 
 # Note that the protobuf stub (ProcessCollector.pb.o) is included
-OBJS=LinuxProcessMonitor.o PidMonitor.o stubs/ProcessCollector.pb.o
+OBJS=LinuxProcessMonitorLight.o PidMonitor.o stubs/ProcessCollector.pb.o
 ProcessCollector: $(OBJS) ProcessCollector.h ProcessCollector.cpp
 	$(CC) $(CFLAGS_SO_PREPARE) $(INC_PATH) $?
 	$(CC) $(CFLAGS_SO_CREATE) $(LIB_PATH) -o lib$@.so $(OBJS) ProcessCollector.o $(LIB)
-	mv lib$@.so $(SYSTEM)/lib # Should not be necessary, but otherwise it is not found...
 		
 SubDirsPost:
 	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE}) ; done
