--- a/lib/touchmanager/Makefile
+++ b/lib/touchmanager/Makefile
@@ -4,8 +4,9 @@ all: TouchManager
 	
 clean:
 	rm -f *.o
+	rm -f *.gch
 
 TouchManager: STouchManager.h STouchManager.cpp WVGeometry.h WVGeometry.cpp
-	$(CC) -O2 -c -fPIC -Wno-multichar $(INC_PATH) $(LIB_PATH) $? -lpthread -lshout
+	$(CC) -O2 -c -fPIC -Wno-multichar $(INC_PATH) $(LIB_PATH) $?
 	ar rcs lib$@.a STouchManager.o WVGeometry.o
 	mv *.a ..
