--- a/monitors/gnuplot/Makefile
+++ b/monitors/gnuplot/Makefile
@@ -1,16 +1,17 @@
 include ../Makefile.inc
 include ../../Makefile.inc
 
-LIB=-lSystem -lProcessCollector
+LIB=-lwSystem -lProcessCollector
 SRC=*.cpp *.h
 
 all: $(SRC)
 	protoc --cpp_out=. *.proto
-	$(CC) $(CFLAGS_SO_PREPARE) $(INC_PATH) $(SRC)
-	$(CC) $(CFLAGS_SO_CREATE) $(LIB_PATH) -o gnuplot.so *.o $(LIB)
+	$(CC) -g $(CFLAGS_SO_PREPARE) $(INC_PATH) $(SRC)
+	$(CC) -g $(CFLAGS_SO_CREATE) $(LIB_PATH) -o gnuplot.so *.o $(LIB)
 	cp *.so ../bin
 			
 clean:
 	rm -f *.o
 	rm -f *.so
+	rm -f *.gch
 
