--- a/server/Makefile
+++ b/server/Makefile
@@ -1,15 +1,20 @@
 include ../Makefile.inc
 
-LIB_LOCAL=-lprofiler -lByteBuffer -lMonitorDispatcher
-EXECUTABLE_NAME=wallmons
+
+
 SRC=*.cpp *.h
+
+LIB_LOCAL=-lByteBuffer -lMonitorDispatcher
+ifeq ($(PLATFORM), Darwin)	
+	LIB_LOCAL+=-framework OpenGL `sdl-config --libs`
+endif
 
 all: wallmons
 
 wallmons: $(SRC)
-	$(CC) $(CFLAGS_COMMON) -D $(PLATFORM) -o $(EXECUTABLE_NAME) $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON) $(LIB_LOCAL)
+	$(CC) $(CFLAGS_COMMON) -D $(PLATFORM) -o $@ $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON) $(LIB_LOCAL)
 
 clean:
 	rm -f *.o
-	rm -f $(EXECUTABLE_NAME)
+	rm -f wallmons
 
